--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,72 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.11
-  - poppler
+  - bzip2=1.0.8=hfdf4475_7
+  - c-ares=1.34.1=h44e7173_0
+  - ca-certificates=2024.8.30=h8857fd0_0
+  - cairo=1.18.0=h37bd5c4_3
+  - expat=2.6.3=hac325c4_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.14.2=h5bb23bf_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - freetype=2.12.1=h60636b9_2
+  - icu=75.1=h120a0e1_0
+  - krb5=1.21.3=h37d8d59_0
+  - lcms2=2.16=ha2f27b4_0
+  - lerc=4.0.0=hb486fe8_0
+  - libcurl=8.10.1=h58e7537_0
+  - libcxx=19.1.1=hf95d169_0
+  - libdeflate=1.22=h00291cd_0
+  - libedit=3.1.20191231=h0678c8f_2
+  - libev=4.33=h10d778d_2
+  - libexpat=2.6.3=hac325c4_0
+  - libffi=3.4.2=h0d85af4_5
+  - libglib=2.82.1=h63bbcf2_0
+  - libiconv=1.17=hd75f5a5_2
+  - libintl=0.22.5=hdfe23c8_3
+  - libjpeg-turbo=3.0.0=h0dc2134_1
+  - libnghttp2=1.58.0=h64cf6d3_1
+  - libpng=1.6.44=h4b8f8c9_0
+  - libsqlite=3.46.1=h4b8f8c9_0
+  - libssh2=1.11.0=hd019ec5_0
+  - libtiff=4.7.0=h583c2ba_1
+  - libwebp-base=1.4.0=h10d778d_0
+  - libzlib=1.3.1=h87427d6_1
+  - ncurses=6.5=hf036a51_1
+  - nspr=4.35=hea0b92c_0
+  - nss=3.105=h3135457_0
+  - openjpeg=2.5.2=h7310d3a_0
+  - openssl=3.3.2=hd23fc13_0
+  - pcre2=10.44=h7634a1b_2
+  - pip=24.2=pyh8b19718_1
+  - pixman=0.43.4=h73e2aa4_0
+  - poppler=24.08.0=h65860a0_1
+  - poppler-data=0.4.12=hd8ed1ab_0
+  - python=3.11.10=h8f8b54e_1_cpython
+  - readline=8.2=h9e318b2_1
+  - setuptools=75.1.0=pyhd8ed1ab_0
+  - tk=8.6.13=h1abcd95_1
+  - tzdata=2024a=h8827d51_1
+  - wheel=0.44.0=pyhd8ed1ab_0
+  - xz=5.2.6=h775f41a_0
+  - zlib=1.3.1=h87427d6_1
+  - zstd=1.5.6=h915ae27_0
+  - pip:
+    - anyio==4.6.0
+    - certifi==2024.8.30
+    - charset-normalizer==3.4.0
+    - h11==0.14.0
+    - httpcore==1.0.5
+    - httpx==0.27.2
+    - idna==3.10
+    - notion-client==2.2.1
+    - pdf2image==1.17.0
+    - pillow==10.4.0
+    - requests==2.32.3
+    - sniffio==1.3.1
+    - urllib3==2.2.3
 prefix: /Users/adamklebus/anaconda3/envs/pdf-to-notion
